FIX:Pagination and Spacing

--- a/src/containers/Admin/style.scss
+++ b/src/containers/Admin/style.scss
@@ -1,10 +1,10 @@
-@import 'assets/css/index';
+@import "assets/css/index";
 
 .admin-panel {
   .main-heading {
     margin: 0;
     border-bottom: none !important;
-    padding: 20px 0px 16px;
+    padding: 22px 0px 12px 0px;
     p {
       color: #084892;
       font-size: 22px;
@@ -95,7 +95,8 @@
 
   .inner-content {
     background: $white;
-    padding: 24px;
+
+    padding: 16px 24px !important;
   }
   nav {
     margin: 0;
@@ -445,7 +446,7 @@
           width: 50%;
           margin-right: 8px;
           span {
-            font-family: 'Open sans';
+            font-family: "Open sans";
             font-style: normal;
             font-weight: normal;
             font-size: 12px;
@@ -473,7 +474,7 @@
           flex-direction: column;
           width: 50%;
           span {
-            font-family: 'Open sans';
+            font-family: "Open sans";
             font-style: normal;
             font-weight: normal;
             font-size: 12px;
@@ -534,7 +535,7 @@
             span {
               display: flex;
               align-items: center;
-              font-family: 'Open Sans';
+              font-family: "Open Sans";
               font-style: normal;
               font-weight: normal;
               font-size: 14px;
@@ -558,7 +559,7 @@
             span {
               display: flex;
               align-items: center;
-              font-family: 'Open Sans';
+              font-family: "Open Sans";
               font-style: normal;
               font-weight: normal;
               font-size: 14px;
@@ -890,7 +891,7 @@
         font-size: 14px;
         line-height: 20px;
         color: #767676;
-        font-family: 'Open Sans';
+        font-family: "Open Sans";
         span {
           display: flex;
         }
@@ -932,7 +933,7 @@
             flex-shrink: 0;
           }
           .admin-name {
-            font-family: 'Open Sans';
+            font-family: "Open Sans";
             font-size: 14px;
             line-height: 20px;
             color: #084892;
@@ -954,7 +955,7 @@
           margin-top: 5px;
           border-radius: 7px;
           cursor: pointer;
-          font-family: 'Open Sans';
+          font-family: "Open Sans";
           font-weight: normal;
           font-size: 14px;
           line-height: 20px;
@@ -1022,7 +1023,7 @@
             margin-left: auto;
             background-image: none !important;
             margin-top: 5px;
-            content: '';
+            content: "";
             border: none;
           }
         }
@@ -1633,7 +1634,7 @@
     position: relative;
 
     &::before {
-      content: ' ';
+      content: " ";
       position: absolute;
       top: -11px;
       right: 10px;
@@ -1659,7 +1660,7 @@
   background: #eff6f0;
   border: 1px solid #12b347;
   border-radius: 10px;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
@@ -1671,7 +1672,7 @@
   background: #f1f1f1;
   border: 1px solid #dddddd;
   border-radius: 10px;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
@@ -1686,7 +1687,7 @@
   background: #e5eeff;
   border-radius: 4px;
   text-align: center;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -1699,7 +1700,7 @@
   background: rgba(255, 64, 59, 0.08);
   border-radius: 4px;
   text-align: center;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -1820,7 +1821,7 @@
       position: absolute;
       right: 5px;
       top: 10px;
-      content: url('../../assets/images/svg/VectorAngleRight.svg');
+      content: url("../../assets/images/svg/VectorAngleRight.svg");
     }
   }
 }
@@ -1847,7 +1848,7 @@
     position: absolute;
     right: 5px;
     top: 15px;
-    content: url('../../assets/images/svg/angledown.svg');
+    content: url("../../assets/images/svg/angledown.svg");
   }
 }
 .checkbox_section_custom {
@@ -2062,7 +2063,7 @@
     border-bottom: 4px solid #084892 !important;
   }
   input:radio {
-    content: '\f00c';
+    content: "\f00c";
     position: absolute;
     display: none;
   }
@@ -2090,7 +2091,7 @@
 
   .checkbox-custom + .checkbox-custom-label:before,
   .radio-custom + .radio-custom-label:before {
-    content: '';
+    content: "";
     background: #fff;
     border: 2px solid #084892;
     display: inline-block;
@@ -2105,7 +2106,7 @@
   }
 
   .checkbox-custom:checked + .checkbox-custom-label:before {
-    content: '\f00c';
+    content: "\f00c";
     font-family: $fontawesome;
     background: #084892;
     color: #fff;
@@ -2117,7 +2118,7 @@
   }
 
   .radio-custom:checked + .radio-custom-label:before {
-    content: '\f00c';
+    content: "\f00c";
     font-family: $fontawesome;
     color: #fff;
     background: #084892;
@@ -2126,7 +2127,7 @@
 }
 
 .sorting-icon:after {
-  content: '\f0dc';
+  content: "\f0dc";
   font-family: $fontawesome;
   padding-left: 10px !important;
   vertical-align: middle;
@@ -2343,7 +2344,7 @@
       width: 100% !important;
       align-items: center;
       display: flex;
-      input[type='color'] {
+      input[type="color"] {
         background-color: transparent;
         border: none !important;
         width: 60px;
@@ -2352,7 +2353,7 @@
         overflow: hidden;
         outline: none;
       }
-      input[type='text'] {
+      input[type="text"] {
         // flex: 1;
         width: 161px;
         text-indent: 15px;
