--- a/src/containers/Preview/ProjectPreview/style.scss
+++ b/src/containers/Preview/ProjectPreview/style.scss
@@ -32,7 +32,7 @@
   // background-color: #fff;
   display: flex;
   justify-content: space-between;
-  padding-bottom: 32px;
+  padding-bottom: 24px;
   border-bottom: 2px solid #dddddd;
   .scene-project-name-description {
     width: 400px;
